--- a/custom_components/smartthinq_sensors/translations/it.json
+++ b/custom_components/smartthinq_sensors/translations/it.json
@@ -5,20 +5,21 @@
             "no_smartthinq_devices": "Nessun dispositivo SmartThinQ trovato. Component setup interrotto."
         },
         "error": {
+            "error_url": "Errore nel recuperare l'URL di login da ThinQ.",
             "invalid_region": "Formato Paese non valido.",
             "invalid_language": "Formato lingua non valido.",
-            "invalid_url": "URL di reindizzamento non valido.",
-            "invalid_credentials": "Credendiali SmartThinQ non valide."
+            "invalid_url": "URL di reindizzamento non valido. Accertati di poter accedere alla app ThinQ sul tuo smartphone. Puoi richiedere supporto [qui](https://git.io/JTjid).",
+            "invalid_credentials": "Credenziali SmartThinQ non valide. Riprova, assicurandoti prima di poter accedere dall'applicazione ThinQ sul telefono"
         },
         "step": {
             "user": {
                 "data": {
-                    "region": "Paese (ISO 3166-1 alpha-2, per es. IT)",
-                    "language": "Lingua (ISO-639-1, per es. it)",
-                    "token": "Aggiornare il Token (solo per Authentication mode v1)",
-                    "use_api_v2": "Usa Authentication mode v2"
+                    "region": "Codice Paese",
+                    "language": "Codice Lingua",
+                    "use_tls_v1": "Forza l'utilizzo del protocollo TLSv1 (richiesto in alcuni casi)",
+                    "exclude_dh": "Non utilizzare il cypher DH (in caso di errore 'dh key too small')"
                 },
-                "description": "Inserisci le informazioni di acceso SmartThinQ. Se non si dispone di un token di aggiornamento, lasciarlo vuoto per avviare il processo di autenticazione con le proprie credenziali. Il token di aggiornamento non viene usato con Authentication mode v2.",
+                "description": "Seleziona le informazioni di localizzazione del tuo account SmartThinQ.",
                 "title": "SmartThinQ LGE Sensors"
             },
             "url": {
@@ -26,8 +27,8 @@
                     "login_url": "URL di accesso a SmartThinQ",
                     "callback_url": "URL di reindirizzamento"
                 },
-                "description": "Utilizzare l'URL del primo campo per eseguire l'accesso con le proprie credenziali a SmartThinQ, poi incollare l'URL in cui si viene reindirizzati con il browser dopo l'accesso nel secondo campo.",
-                "title": "SmartThinQ LGE Sensors - Autentificazione"
+                "description": "Utilizzare l'URL del primo campo per eseguire l'accesso con le proprie credenziali a SmartThinQ, poi incollare l'URL in cui si viene reindirizzati con il browser dopo l'accesso nel secondo campo. Condividi i tuoi feedback sul setup [qui](https://git.io/JU166).",
+                "title": "SmartThinQ LGE Sensors - Autenticazione"
             },
             "token": {
                 "data": {
