--- a/custom_components/alexa_media/translations/es.json
+++ b/custom_components/alexa_media/translations/es.json
@@ -1,75 +1,60 @@
 {
-    "config": {
-        "abort": {
-            "forgot_password": "",
-            "login_failed": "",
-            "reauth_successful": ""
-        },
-        "error": {
-            "connection_error": "Error al conectar, verifique la red y vuelva a intentarlo",
-            "identifier_exists": "Correo electrónico para la URL de Alexa ya registrado",
-            "invalid_credentials": "Credenciales no válidas",
-            "unknown_error": "Error desconocido, por favor reporte la información del registro"
-        },
-        "step": {
-            "action_required": {
-                "description": "A continuación Amazon enviará una notificación push en el siguiente mensaje. Por favor, responda en su totalidad antes de continuar.",
-                "title": "Alexa Media Player - Acción requerida"
-            },
-            "authselect": {
-                "data": {
-                    "authselectoption": "metodo OTP"
-                },
-                "description": "**{email} - alexa.{url}**\n{message}",
-                "title": "Alexa Media Player - Contraseña de un solo uso"
-            },
-            "captcha": {
-                "data": {
-                    "captcha": "Captcha",
-                    "password": "Contraseña",
-                    "securitycode": ""
-                },
-                "description": "**{email} - alexa.{url}**\n{message}\n {captcha_image}",
-                "title": "Alexa Media Player - Captcha"
-            },
-            "claimspicker": {
-                "data": {
-                    "authselectoption": "Método de verificación"
-                },
-                "description": "**{email} - alexa.{url}**\nSeleccione el método de verificación por número. (e.g., `0` or `1`)\n{message}",
-                "title": "Alexa Media Player - Método de verificación"
-            },
-            "twofactor": {
-                "data": {
-                    "securitycode": "2FA Code"
-                },
-                "description": "**{email} - alexa.{url}**\nIngrese la contraseña de un solo uso (OTP).\n{message}",
-                "title": "Alexa Media Player - Autenticación de dos factores"
-            },
-            "user": {
-                "data": {
-                    "debug": "Depuración avanzada",
-                    "email": "Dirección de correo electrónico",
-                    "exclude_devices": "Dispositivo excluido (separado por comas)",
-                    "include_devices": "Dispositivo incluido (separado por comas)",
-                    "password": "Contraseña",
-                    "scan_interval": "Segundos entre escaneos",
-                    "securitycode": "",
-                    "url": "Region del dominio de Amazon (e.g., amazon.co.uk)"
-                },
-                "description": "Por favor, introduzca su información.",
-                "title": "Alexa Media Player - Configuracion"
-            }
-        },
-        "title": "Alexa Media Player"
+  "config": {
+    "abort": {
+      "forgot_password": "Se ha detectado la página de \"Ha olvidado su contraseña\". Normalmente esto ocurre si has intentado iniciar sesión varias veces de forma fallida. Amazon puede que te pida alguna acción adicional antes de poder volver a intentar iniciar sesión.",
+      "login_failed": "Alexa Media Player no pudo iniciar sesión.",
+      "reauth_successful": "Alexa Media Player se volvió a autenticar con éxito. Ignore el mensaje \"Cancelado\" de HA."
     },
-    "options": {
-        "step": {
-            "init": {
-                "data": {
-                    "queue_delay": "Segundos de espera a la cola de comandos a la vez"
-                }
-            }
-        }
+    "error": {
+      "2fa_key_invalid": "Invalid Built-In 2FA key",
+      "connection_error": "Error al conectar, verifique la red y vuelva a intentarlo",
+      "identifier_exists": "Correo electrónico para la URL de Alexa ya registrado",
+      "invalid_credentials": "Credenciales no válidas",
+      "invalid_url": "La URL no es válida: {message}",
+      "unable_to_connect_hass_url": "No se puede conectar con la URL de Home Assistant. Verifique la URL externa en Configuración - > General",
+      "unknown_error": "Error desconocido: {mensaje}"
+    },
+    "step": {
+      "proxy_warning": {
+        "data": {
+          "proxy_warning": "Ignorar y continuar: entiendo que no se proporciona soporte para problemas de inicio de sesión para eludir esta advertencia."
+        },
+        "description": "El servidor HA no puede conectarse a la URL proporcionada: {hass_url} .\n > {error} \n\n Para solucionar esto, confirme que su **servidor HA** puede llegar a {hass_url} . Este campo es de la URL externa en Configuración - > General, pero puede probar su URL interna. \n\n Si está **seguro** de que su cliente puede acceder a esta URL, puede omitir esta advertencia.",
+        "title": "Alexa Media Player: no se puede conectar a la URL de alta disponibilidad"
+      },
+      "totp_register": {
+        "data": {
+          "registered": "OTP from the Built-in 2FA App Key confirmed successfully."
+        },
+        "description": "**{email} - alexa.{url}**  \nHave you successfully confirmed an OTP from the Built-in 2FA App Key with Amazon?  \n >OTP Code {message}",
+        "title": "Alexa Media Player - OTP Confirmation"
+      },
+      "user": {
+        "data": {
+          "debug": "Depuración avanzada",
+          "email": "Dirección de correo electrónico",
+          "exclude_devices": "Dispositivo excluido (separado por comas)",
+          "hass_url": "Url para acceder a Home Assistant",
+          "include_devices": "Dispositivo incluido (separado por comas)",
+          "otp_secret": "Clave de aplicación 2FA incorporada (genera automáticamente códigos 2FA). Esto no tiene seis dígitos.",
+          "password": "Contraseña",
+          "scan_interval": "Segundos entre escaneos",
+          "securitycode": "Código 2FA (recomendado para evitar problemas de inicio de sesión)",
+          "url": "Región del dominio de Amazon (por ejemplo, amazon.es)"
+        },
+        "description": "Por favor, confirme la información a continuación. Para la configuración heredada, deshabilite la opción 'Usar método de proxy de inicio de sesión'.",
+        "title": "Alexa Media Player - Configuración"
+      }
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "data": {
+          "extended_entity_discovery": "Incluir dispositivos conectados a través de Echo",
+          "queue_delay": "Segundos a esperar para agrupar comandos"
+        }
+      }
+    }
+  }
 }
