--- a/custom_components/alexa_media/translations/nl.json
+++ b/custom_components/alexa_media/translations/nl.json
@@ -1,75 +1,60 @@
 {
-    "config": {
-        "abort": {
-            "forgot_password": "",
-            "login_failed": "",
-            "reauth_successful": ""
-        },
-        "error": {
-            "connection_error": "Fout bij verbinden; controleer netwerk en probeer opnieuw",
-            "identifier_exists": "Dit e-mailadres is reeds geregistreerd",
-            "invalid_credentials": "Ongeldige inloggegevens",
-            "unknown_error": "Onbekende fout, meld de loggegevens"
-        },
-        "step": {
-            "action_required": {
-                "description": "",
-                "title": ""
-            },
-            "authselect": {
-                "data": {
-                    "authselectoption": "Eenmalige Pincode"
-                },
-                "description": "**{email} - alexa.{url}**\n{message}",
-                "title": "Alexa Media Player - Eenmalige Pincode"
-            },
-            "captcha": {
-                "data": {
-                    "captcha": "Captcha",
-                    "password": "Paswoord",
-                    "securitycode": ""
-                },
-                "description": "**{email} - alexa.{url}**\n{message}\n {captcha_image}",
-                "title": "Alexa Media Player - Captcha"
-            },
-            "claimspicker": {
-                "data": {
-                    "authselectoption": "Verificatiemethode"
-                },
-                "description": "**{email} - alexa.{url}**\nSelecteer de verificatiemethode (bv.`0` of `1`)\n{message}",
-                "title": "Alexa Media Player - Verificatiemethode"
-            },
-            "twofactor": {
-                "data": {
-                    "securitycode": "Verificatiecode"
-                },
-                "description": "**{email} - alexa.{url}**\nGeef de verificatiecode in.\n{message}",
-                "title": "Alexa Media Player - Tweestapsverificatie"
-            },
-            "user": {
-                "data": {
-                    "debug": "Geavanceerd debuggen",
-                    "email": "E-mailadres",
-                    "exclude_devices": "Apparaten uitsluiten (Scheiding: komma)",
-                    "include_devices": "Apparaten toevoegen (Scheiding: komma)",
-                    "password": "Paswoord",
-                    "scan_interval": "Aantal seconden tussen scans",
-                    "securitycode": "",
-                    "url": "Domeinnaam van Amazon regio (bv.amazon.co.uk)"
-                },
-                "description": "Vul je gegevens in a.u.b.",
-                "title": "Alexa Media Player - Configuratie"
-            }
-        },
-        "title": "Alexa Media Player"
+  "config": {
+    "abort": {
+      "forgot_password": "The Forgot Password page was detected. This normally is the result of too may failed logins. Amazon may require action before a relogin can be attempted.",
+      "login_failed": "Alexa Media Player failed to login.",
+      "reauth_successful": "Alexa Media Player successfully reauthenticated."
     },
-    "options": {
-        "step": {
-            "init": {
-                "data": {
-                    "queue_delay": "Seconden om te wachten om opdrachten in de wachtrij te plaatsen"
-                }
-            }
-        }
+    "error": {
+      "2fa_key_invalid": "Invalid Built-In 2FA key",
+      "connection_error": "Fout bij verbinden; controleer netwerk en probeer opnieuw",
+      "identifier_exists": "Dit e-mailadres is reeds geregistreerd",
+      "invalid_credentials": "Ongeldige inloggegevens",
+      "invalid_url": "URL is ongeldig: {message}",
+      "unable_to_connect_hass_url": "Kan geen verbinding maken met de Home Assistant-url. Controleer de externe URL onder Configuratie - > Algemeen",
+      "unknown_error": "Onbekende fout, meld de loggegevens"
+    },
+    "step": {
+      "proxy_warning": {
+        "data": {
+          "proxy_warning": "Ignore and Continue - I understand that no support for login issues are provided for bypassing this warning."
+        },
+        "description": "The HA server cannot connect to the URL provided: {hass_url}.\n> {error}\n\nTo fix this, please confirm your **HA server** can reach {hass_url}. This field is from the External Url under Configuration -> General but you can try your internal url.\n\nIf you are **certain** your client can reach this url, you can bypass this warning.",
+        "title": "Alexa Media Player - Unable to Connect to HA URL"
+      },
+      "totp_register": {
+        "data": {
+          "registered": "OTP from the Built-in 2FA App Key confirmed successfully."
+        },
+        "description": "**{email} - alexa.{url}**  \nHave you successfully confirmed an OTP from the Built-in 2FA App Key with Amazon?  \n >OTP Code {message}",
+        "title": "Alexa Media Player - OTP Confirmation"
+      },
+      "user": {
+        "data": {
+          "debug": "Geavanceerd debuggen",
+          "email": "E-mailadres",
+          "exclude_devices": "Apparaten uitsluiten (Scheiding: komma)",
+          "hass_url": "Url to access Home Assistant",
+          "include_devices": "Apparaten toevoegen (Scheiding: komma)",
+          "otp_secret": "Built-in 2FA App Key (automatically generate 2FA Codes)",
+          "password": "Paswoord",
+          "scan_interval": "Aantal seconden tussen scans",
+          "securitycode": "2FA Code (recommended to avoid login issues)",
+          "url": "Domeinnaam van Amazon regio (bv.amazon.co.uk)"
+        },
+        "description": "Vul je gegevens in a.u.b.",
+        "title": "Alexa Media Player - Configuratie"
+      }
     }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "data": {
+          "extended_entity_discovery": "Inclusief apparaten die zijn verbonden via Echo",
+          "queue_delay": "Seconden om te wachten om opdrachten in de wachtrij te plaatsen"
+        }
+      }
+    }
+  }
 }
