--- a/custom_components/alexa_media/translations/de.json
+++ b/custom_components/alexa_media/translations/de.json
@@ -9,8 +9,10 @@
       "2fa_key_invalid": "Ungültiger 2-Faktor Schlüssel",
       "connection_error": "Verbindungsfehler; Netzwerk prüfen und erneut versuchen",
       "identifier_exists": "Diese E-Mail-Adresse ist bereits registriert",
+      "invalid_auth": "Die Anmeldung ist fehlgeschlagen. Bitte überprüfen Sie Ihre E-Mail-Adresse, Ihr Passwort und Ihren Authentifizierungsschlüssel.",
       "invalid_credentials": "Ungültige Zugangsdaten",
       "invalid_url": "URL ist ungültig: {message}",
+      "oauth_error": "Die OAuth-Anmeldung konnte nicht abgeschlossen werden. Bitte versuchen Sie es erneut.",
       "unable_to_connect_hass_url": "Es kann keine Verbindung zur Home Assistant-URL hergestellt werden. Bitte überprüfen Sie die externe URL unter Konfiguration -> Allgemein",
       "unknown_error": "Unbekannter Fehler: {message}"
     },
@@ -39,14 +41,22 @@
           "include_devices": "Eingebundene Geräte (Komma getrennt)",
           "otp_secret": "Integrierter 2FA-App-Schlüssel (automatisch generierte 2FA-Code)",
           "password": "Passwort",
+          "public_url": "Öffentliche URL, die mit extern gehosteten Diensten geteilt wird",
           "queue_delay": "Zu wartende Sekunden, um Befehle in die Warteschlange zu stellen",
-          "scan_interval": "Sekunden zwischen den Scans",
+          "scan_interval": "Geplantes Abfrageintervall (Sekunden)",
           "securitycode": "2FA-Code (empfohlen, um Anmeldeprobleme zu vermeiden)",
+          "should_get_network": "Entdecken Sie das Alexa-Netzwerk",
           "url": "Amazon Region (z.B. amazon.de)"
         },
-        "description": "Bitte geben Sie Ihre Informationen ein.",
+        "description": "Erforderlich *",
         "title": "Alexa Media Player - Konfiguration"
       }
+    }
+  },
+  "issues": {
+    "deprecated_yaml_configuration": {
+      "description": "Die YAML-Konfiguration des Alexa Media Players ist veraltet und wird in Version 4.14.0 entfernt. \nDiese wird nicht automatisch importiert. \nBitte entfernen Sie sie aus Ihrer Konfiguration, starten Sie Home Assistant neu und verwenden Sie stattdessen die Benutzeroberfläche zur Konfiguration. \nEinstellungen > Geräte und Dienste > Integrationen > INTEGRATION HINZUFÜGEN",
+      "title": "Die YAML-Konfiguration ist veraltet"
     }
   },
   "options": {
@@ -55,42 +65,62 @@
         "data": {
           "debug": "Erweitertes Debugging",
           "exclude_devices": "Ausgeschlossene Geräte (Komma getrennt)",
-          "extended_entity_discovery": "Schließen Sie Geräte ein, die über Echo verbunden sind",
-          "hass_url": "Öffentliche URL für den Zugriff auf Home Assistant (einschließlich '/' am Ende)",
+          "extended_entity_discovery": "Über Echo verbundene Geräte einbeziehen",
           "include_devices": "Eingebundene Geräte (Komma getrennt)",
           "public_url": "Öffentliche URL für den Zugriff auf Home Assistant (einschließlich '/' am Ende)",
           "queue_delay": "Zu wartende Sekunden, um Befehle in die Warteschlange zu stellen",
-          "scan_interval": "Sekunden zwischen den Scans"
+          "scan_interval": "Sekunden zwischen den Scans",
+          "should_get_network": "Entdecken Sie das Alexa-Netzwerk"
         },
         "description": "Erforderlich *",
-        "title": "Alexa Media Player - Rekonfikuration"
+        "title": "Alexa Media Player - Rekonfiguration"
       }
     }
   },
   "services": {
-    "clear_history": {
-      "description": "Lösche letzte Einträge der Alexa Stimmbefehl-Historie für jeden Alexa Account.",
+    "enable_network_discovery": {
+      "description": "Aktiviert die Alexa-Netzwerkerkennung erneut, sodass beim nächsten Abfragezyklus die Alexa-Geräte für die ausgewählten Konten erneut erkannt werden.",
       "fields": {
         "email": {
-          "description": "Zu löschende Accounts. Falls leer, werden alle gelöscht.",
+          "description": "Optionale E-Mail-Adresse oder Liste von E-Mail-Adressen Ihres Alexa-Kontos. Falls leer, werden alle bekannten Konten aktualisiert.",
           "name": "E-Mail-Adresse"
-        },
-        "entries": {
-          "description": "Zu löschende Einträge von 1 bis 50. Falls leer, lösche 50.",
-          "name": "Anzahl der Einträge"
         }
       },
-      "name": "Lösche Alexa Stimmbefehl-Historie."
+      "name": "Netzwerkermittlung aktivieren"
     },
     "force_logout": {
       "description": "Logout erzwingen. Primär für Debugging genutzt.",
       "fields": {
         "email": {
-          "description": "Zu löschende Accounts. Falls leer werden alle gelöscht.",
+          "description": "Zu löschende Accounts. Falls leer, werden alle gelöscht.",
           "name": "E-Mail-Adresse"
         }
       },
       "name": "Logout erzwingen"
+    },
+    "get_history_records": {
+      "description": "Analysiert die Verlaufsdatensätze für das angegebene Gerät",
+      "fields": {
+        "entity_id": {
+          "description": "Entität, für die der Verlauf abgerufen werden soll",
+          "name": "Mediaplayer auswählen:"
+        },
+        "entries": {
+          "description": "Anzahl der abzurufenden Einträge",
+          "name": "Anzahl der Einträge"
+        }
+      },
+      "name": "Verlaufsdatensätze abrufen"
+    },
+    "restore_volume": {
+      "description": "Vorherige Lautstärke auf dem Alexa-Mediaplayer-Gerät wiederherstellen",
+      "fields": {
+        "entity_id": {
+          "description": "Entität zum Wiederherstellen der vorherigen Lautstärke auf",
+          "name": "Mediaplayer auswählen:"
+        }
+      },
+      "name": "Vorherige Lautstärke wiederherstellen"
     },
     "update_last_called": {
       "description": "Erzwinge Updates der zuletzt aufgerufenen Echo Geräte für jeden Alexa Account.",
