--- a/custom_components/alexa_media/translations/es.json
+++ b/custom_components/alexa_media/translations/es.json
@@ -9,8 +9,10 @@
       "2fa_key_invalid": "Invalid Built-In 2FA key",
       "connection_error": "Error al conectar, verifique la red y vuelva a intentarlo",
       "identifier_exists": "Correo electrónico para la URL de Alexa ya registrado",
+      "invalid_auth": "No se pudo iniciar sesión correctamente. Por favor, revise su correo electrónico, contraseña y clave de autenticación.",
       "invalid_credentials": "Credenciales no válidas",
       "invalid_url": "La URL no es válida: {message}",
+      "oauth_error": "No se pudo completar el inicio de sesión de OAuth. Inténtalo de nuevo.",
       "unable_to_connect_hass_url": "No se puede conectar con la URL de Home Assistant. Verifique la URL externa en Configuración -> General",
       "unknown_error": "Error desconocido: {message}"
     },
@@ -39,14 +41,22 @@
           "include_devices": "Dispositivo incluido (separado por comas)",
           "otp_secret": "Clave de aplicación 2FA incorporada (genera automáticamente códigos 2FA). Esto no tiene seis dígitos.",
           "password": "Contraseña",
+          "public_url": "URL pública compartida con servicios alojados externos",
           "queue_delay": "Segundos a esperar para agrupar comandos",
           "scan_interval": "Segundos entre escaneos",
           "securitycode": "Código 2FA (recomendado para evitar problemas de inicio de sesión)",
+          "should_get_network": "Descubra la red Alexa",
           "url": "Región del dominio de Amazon (por ejemplo, amazon.es)"
         },
         "description": "Por favor, confirme la información a continuación. Para la configuración heredada, deshabilite la opción 'Usar método de proxy de inicio de sesión'.",
         "title": "Alexa Media Player - Configuración"
       }
+    }
+  },
+  "issues": {
+    "deprecated_yaml_configuration": {
+      "description": "La configuración YAML de Alexa Media Player está obsoleta \n y se eliminará en la versión 4.14.0. \n No habrá una importación automática de esto. \n Elimínelo de su configuración, reinicie Home Assistant y use la interfaz de usuario para configurarlo. \n Configuración > Dispositivos y servicios > Integraciones > AGREGAR INTEGRACIÓN",
+      "title": "La configuración de YAML está obsoleta"
     }
   },
   "options": {
@@ -56,11 +66,11 @@
           "debug": "Depuración avanzada",
           "exclude_devices": "Dispositivo excluido (separado por comas)",
           "extended_entity_discovery": "Incluir dispositivos conectados a través de Echo",
-          "hass_url": "URL pública para acceder a Home Assistant (incluyendo la '/' final)",
           "include_devices": "Dispositivo incluido (separado por comas)",
           "public_url": "URL pública para acceder a Home Assistant (incluyendo la '/' final)",
           "queue_delay": "Segundos a esperar para agrupar comandos",
-          "scan_interval": "Segundos entre escaneos"
+          "scan_interval": "Segundos entre escaneos",
+          "should_get_network": "Descubra la red Alexa"
         },
         "description": "Obligatorio*",
         "title": "Alexa Media Player - Reconfiguración"
@@ -68,19 +78,15 @@
     }
   },
   "services": {
-    "clear_history": {
-      "description": "Borrar las últimas entradas del historial de voz de Alexa para cada cuenta.",
+    "enable_network_discovery": {
+      "description": "Vuelve a habilitar el descubrimiento de red de Alexa para que el próximo ciclo de sondeo redescubra los dispositivos Alexa para las cuentas seleccionadas.",
       "fields": {
         "email": {
-          "description": "Cuentas a borrar. Si se deja vacío se borraran todas.",
+          "description": "Correo electrónico o lista de correos electrónicos de la cuenta de Alexa (opcional). Si está vacío, se actualizarán todas las cuentas conocidas.",
           "name": "Dirección de correo electrónico"
-        },
-        "entries": {
-          "description": "Número de entradas a borrar del 1 al 50. Si se deja vacío, se borraran 50.",
-          "name": "Número de entradas"
         }
       },
-      "name": "Borrar el historial de voz de Amazon"
+      "name": "Habilitar el descubrimiento de red"
     },
     "force_logout": {
       "description": "Obligar el cierre de sesión de la cuenta. Usar principalmente para depuración.",
@@ -91,6 +97,30 @@
         }
       },
       "name": "Obligar cierre de sesión"
+    },
+    "get_history_records": {
+      "description": "Analiza los registros del historial del dispositivo especificado",
+      "fields": {
+        "entity_id": {
+          "description": "Entidad para obtener el historial",
+          "name": "Seleccionar reproductor multimedia:"
+        },
+        "entries": {
+          "description": "Número de entradas a obtener",
+          "name": "Número de entradas"
+        }
+      },
+      "name": "Obtener registros históricos"
+    },
+    "restore_volume": {
+      "description": "Restaurar el nivel de volumen anterior en el reproductor multimedia Alexa",
+      "fields": {
+        "entity_id": {
+          "description": "Entidad para restaurar el nivel de volumen anterior",
+          "name": "Seleccionar reproductor multimedia:"
+        }
+      },
+      "name": "Restaurar volumen anterior"
     },
     "update_last_called": {
       "description": "Obligar la actualización del último dispositivo Echo llamado para cada cuenta Alexa.",
