--- a/custom_components/alexa_media/translations/it.json
+++ b/custom_components/alexa_media/translations/it.json
@@ -9,8 +9,10 @@
       "2fa_key_invalid": "Chiave 2FA incorporata non valida",
       "connection_error": "Errore durante la connessione; controlla la rete e riprova",
       "identifier_exists": "L'email per l'URL di Alexa è già stata registrata",
+      "invalid_auth": "Accesso non riuscito. Controlla nuovamente la tua email, la password e la chiave di autenticazione.",
       "invalid_credentials": "Credenziali non valide",
       "invalid_url": "URL non valido: {message}",
+      "oauth_error": "Impossibile completare l'accesso OAuth. Riprova.",
       "unable_to_connect_hass_url": "Impossibile collegarsi all'URL di Home Assistant. Controllare l'URL esterno nel menu Configurazione -> Generale",
       "unknown_error": "Errore sconosciuto:{message}"
     },
@@ -39,14 +41,22 @@
           "include_devices": "Dispositivi da includere (separati da virgola)",
           "otp_secret": "Chiave app 2FA integrata (genera automaticamente codici 2FA). Questo non è lungo sei cifre.",
           "password": "Password",
+          "public_url": "URL pubblico condiviso con servizi ospitati esterni",
           "queue_delay": "Secondi di attesa per accodare i comandi insieme",
           "scan_interval": "Tempo in secondi fra le scansioni",
           "securitycode": "Codice 2FA (raccomandato per evitare problemi di login)",
+          "should_get_network": "Scopri la rete Alexa",
           "url": "Regione del dominio Amazon (ad es., amazon.it)"
         },
         "description": "Confermare le informazioni di seguito. Per la configurazione legacy, disabilitare l'opzione \"Utilizza metodo proxy di accesso\".",
         "title": "Alexa Media Player - Configurazione"
       }
+    }
+  },
+  "issues": {
+    "deprecated_yaml_configuration": {
+      "description": "La configurazione YAML di Alexa Media Player è obsoleta \n e verrà rimossa nella versione 4.14.0. \n Non verrà eseguita alcuna importazione automatica. \n Rimuovila dalla configurazione, riavvia Home Assistant e utilizza l'interfaccia utente per configurarla. \n Impostazioni > Dispositivi e servizi > Integrazioni > AGGIUNGI INTEGRAZIONE",
+      "title": "La configurazione YAML è deprecata"
     }
   },
   "options": {
@@ -56,11 +66,11 @@
           "debug": "Debug avanzato",
           "exclude_devices": "Dispositivi da escludere (separati da virgola)",
           "extended_entity_discovery": "Includi i dispositivi collegati tramite Echo",
-          "hass_url": "URL pubblico per accedere a Home Assistant (incluso il '/' finale)",
           "include_devices": "Dispositivi da includere (separati da virgola)",
           "public_url": "URL pubblico per accedere a Home Assistant (incluso il '/' finale)",
           "queue_delay": "Secondi di attesa per accodare i comandi insieme",
-          "scan_interval": "Tempo in secondi fra le scansioni"
+          "scan_interval": "Tempo in secondi fra le scansioni",
+          "should_get_network": "Scopri la rete Alexa"
         },
         "description": "Necessario *",
         "title": "Alexa Media Player - Riconfigurazione"
@@ -68,19 +78,15 @@
     }
   },
   "services": {
-    "clear_history": {
-      "description": "Elimina gli ultimi elementi dalla cronologia voce Alexa per ogni account.",
+    "enable_network_discovery": {
+      "description": "Riattiva la rilevazione della rete Alexa in modo che il successivo ciclo di polling rilevi i dispositivi Alexa per gli account selezionati.",
       "fields": {
         "email": {
-          "description": "Account da eliminare. Se vuoto, verranno cancellati tutti.",
+          "description": "Indirizzo email dell'account Alexa facoltativo o elenco di indirizzi email. Se vuoto, tutti gli account noti verranno aggiornati.",
           "name": "Indirizzo email"
-        },
-        "entries": {
-          "description": "Numero di elementi da eliminare da 1 a 50. Se vuoto, ne verranno eliminati 50.",
-          "name": "Numero di Elementi"
         }
       },
-      "name": "Cancella cronologia voce Amazon"
+      "name": "Abilita rilevamento rete"
     },
     "force_logout": {
       "description": "Forza logout dell'account. Usato principalmente per il debugging.",
@@ -91,6 +97,30 @@
         }
       },
       "name": "Forza Logout"
+    },
+    "get_history_records": {
+      "description": "Analizza i record cronologici per il dispositivo specificato",
+      "fields": {
+        "entity_id": {
+          "description": "Entità per cui ottenere la cronologia",
+          "name": "Seleziona lettore multimediale:"
+        },
+        "entries": {
+          "description": "Numero di voci da ottenere",
+          "name": "Numero di voci"
+        }
+      },
+      "name": "Ottieni i record della cronologia"
+    },
+    "restore_volume": {
+      "description": "Ripristina il livello del volume precedente sul dispositivo lettore multimediale Alexa",
+      "fields": {
+        "entity_id": {
+          "description": "Entità per ripristinare il livello del volume precedente",
+          "name": "Seleziona lettore multimediale:"
+        }
+      },
+      "name": "Ripristina il volume precedente"
     },
     "update_last_called": {
       "description": "Forza l'aggiornamento del dispositivo echo last_called per ogni account Alexa.",
