--- a/custom_components/alexa_media/translations/ja.json
+++ b/custom_components/alexa_media/translations/ja.json
@@ -9,8 +9,10 @@
       "2fa_key_invalid": "無効な Built-In 2FA key",
       "connection_error": "接続エラー：ネットワークを確認して再試行してください",
       "identifier_exists": "Alexa URLのメールアドレスはすでに登録されています",
+      "invalid_auth": "Login was not successful. Please double-check your email, password, and Authenticator key.",
       "invalid_credentials": "無効な資格情報",
       "invalid_url": "URL が無効です：{message}",
+      "oauth_error": "Could not complete OAuth login. Please try again.",
       "unable_to_connect_hass_url": "Home Assistant URL に接続できません。[設定] -> [全般] の [外部 URL] を確認してください。",
       "unknown_error": "不明なエラー：{message}"
     },
@@ -39,14 +41,22 @@
           "include_devices": "含まれるデバイス（カンマ区切り）",
           "otp_secret": "Built-in 2FA App Key (自動生成 2FA コード). これは6桁ではありません。",
           "password": "パスワード",
+          "public_url": "外部ホスティング・サービスと共有される公開URL",
           "queue_delay": "コマンドをキューにまとめて待機させる秒数",
           "scan_interval": "スキャン間隔秒数",
           "securitycode": "[%key_id:55616596%]",
+          "should_get_network": "Discover Alexa network",
           "url": "Amazon 地域ドメイン (例: amazon.co.jp)"
         },
         "description": "以下の情報を確認してください。レガシー構成の場合は、`Use Login Proxy method`オプションを無効にしてください。",
         "title": "Alexa Media Player - 設定"
       }
+    }
+  },
+  "issues": {
+    "deprecated_yaml_configuration": {
+      "description": "Alexa Media PlayerのYAML設定は非推奨であり、バージョン4.14.0で削除される予定です。 この設定の自動インポートは行われません。 設定から削除し、Home Assistantを再起動して、代わりにUIを使用して設定してください。 [設定] -> [デバイスとサービス] -> [統合] -> [統合を追加]",
+      "title": "YAML設定は非推奨です"
     }
   },
   "options": {
@@ -56,11 +66,11 @@
           "debug": "高度なデバッグ",
           "exclude_devices": "除外するデバイス（カンマ区切り）",
           "extended_entity_discovery": "Echo経由で接続されたデバイスを含める",
-          "hass_url": "Home Assistant にアクセスするための公開URL (末尾の '/' を含む)",
           "include_devices": "含まれるデバイス（カンマ区切り）",
           "public_url": "Home Assistant にアクセスするための公開URL (末尾の '/' を含む)",
           "queue_delay": "コマンドをキューにまとめて待機させる秒数",
-          "scan_interval": "スキャン間隔秒数"
+          "scan_interval": "スキャン間隔秒数",
+          "should_get_network": "Discover Alexa network"
         },
         "description": "必須 *",
         "title": "Alexa Media Player - 再設定"
@@ -68,19 +78,15 @@
     }
   },
   "services": {
-    "clear_history": {
-      "description": "各AlexaアカウントのAlexa音声履歴から最後のエントリを消去します。",
+    "enable_network_discovery": {
+      "description": "Re-enables Alexa network discovery so the next polling cycle will rediscover Alexa devices for the selected accounts.",
       "fields": {
         "email": {
-          "description": "削除するアカウント 空にするとすべて削除されます",
-          "name": "メールアドレス"
-        },
-        "entries": {
-          "description": "クリアするエントリー数 (1〜50個)。空の場合は50個をクリア。",
-          "name": "エントリー数"
+          "description": "Optional Alexa account email or list of emails. If empty, all known accounts will be refreshed.",
+          "name": "Email address"
         }
       },
-      "name": "Amazon音声履歴を消去"
+      "name": "Enable Network Discovery"
     },
     "force_logout": {
       "description": "アカウントを強制的にログアウトさせます (主にデバッグに使用します)",
@@ -91,6 +97,30 @@
         }
       },
       "name": "強制ログアウト"
+    },
+    "get_history_records": {
+      "description": "指定したデバイスの履歴レコードを解析します",
+      "fields": {
+        "entity_id": {
+          "description": "履歴を取得するエンティティ",
+          "name": "メディアプレーヤーを選択:"
+        },
+        "entries": {
+          "description": "取得するエントリー数",
+          "name": "エントリー数"
+        }
+      },
+      "name": "履歴レコードを取得する"
+    },
+    "restore_volume": {
+      "description": "Alexaメディアプレーヤーデバイスで以前の音量レベルを復元する",
+      "fields": {
+        "entity_id": {
+          "description": "以前の音量レベルを復元するエンティティ",
+          "name": "メディアプレーヤーを選択:"
+        }
+      },
+      "name": "以前のボリュームを復元"
     },
     "update_last_called": {
       "description": "各Alexaアカウントの最後に呼び出されたEchoデバイスを強制的に更新します。",
