--- a/custom_components/alexa_media/translations/nb.json
+++ b/custom_components/alexa_media/translations/nb.json
@@ -9,8 +9,10 @@
       "2fa_key_invalid": "Invalid Built-In 2FA key",
       "connection_error": "Feil ved tilkobling; sjekk nettverket og prøv på nytt",
       "identifier_exists": "E-post for Alexa URL allerede registrert",
+      "invalid_auth": "Innloggingen mislyktes. Dobbeltsjekk e-post, passord og autentiseringsnøkkel.",
       "invalid_credentials": "ugyldige legitimasjon",
       "invalid_url": "URL er ugyldig: {message}",
+      "oauth_error": "Kunne ikke fullføre OAuth-pålogging. Prøv på nytt.",
       "unable_to_connect_hass_url": "Kan ikke koble til Home Assistant-nettadressen. Vennligst sjekk den eksterne nettadressen under Konfigurasjon - > Generelt",
       "unknown_error": "Ukjent feil, vennligst rapporter logginfo"
     },
@@ -34,19 +36,27 @@
           "debug": "Avansert feilsøking",
           "email": "Epostadresse",
           "exclude_devices": "Ekskludert enhet (kommaseparert)",
-          "extended_entity_discovery": "Include devices connected via Echo",
+          "extended_entity_discovery": "Inkluder ekstra sensorer, brytere og lys",
           "hass_url": "Url to access Home Assistant",
           "include_devices": "Inkluder enhet (kommaseparert)",
           "otp_secret": "Built-in 2FA App Key (automatically generate 2FA Codes)",
           "password": "Passord",
+          "public_url": "Offentlig URL delt med eksterne vertstjenester",
           "queue_delay": "Sekunder for å vente på køkommandoer sammen",
           "scan_interval": "Sekunder mellom skanninger",
           "securitycode": "2FA-kode (anbefales for å unngå påloggingsproblemer)",
+          "should_get_network": "Oppdag Alexa-nettverket",
           "url": "Amazon-regiondomenet (f.eks. Amazon.co.uk)"
         },
         "description": "Bekreft informasjonen nedenfor.",
         "title": "Alexa Media Player - Konfigurasjon"
       }
+    }
+  },
+  "issues": {
+    "deprecated_yaml_configuration": {
+      "description": "YAML-konfigurasjonen av Alexa Media Player er utdatert \n og vil bli fjernet i versjon 4.14.0. \n Det vil ikke være noen automatisk import av dette. \n Fjern den fra konfigurasjonen din, start Home Assistant på nytt og bruk brukergrensesnittet til å konfigurere det i stedet. \n Innstillinger > Enheter og tjenester > Integrasjoner > LEGG TIL INTEGRASJON",
+      "title": "YAML-konfigurasjonen er utdatert"
     }
   },
   "options": {
@@ -56,31 +66,27 @@
           "debug": "Avansert feilsøking",
           "exclude_devices": "Ekskludert enhet (kommaseparert)",
           "extended_entity_discovery": "Inkluder enheter som er koblet til via Echo",
-          "hass_url": "Offentlig URL for å få tilgang til Home Assistant (inkludert etterfølgende ''/'')",
           "include_devices": "Inkluder enhet (kommaseparert)",
           "public_url": "Offentlig URL for å få tilgang til Home Assistant (inkludert etterfølgende ''/'')",
           "queue_delay": "Sekunder for å vente på køkommandoer sammen",
-          "scan_interval": "Sekunder mellom skanninger"
+          "scan_interval": "Sekunder mellom skanninger",
+          "should_get_network": "Oppdag Alexa-nettverket"
         },
-        "description": "Required *",
+        "description": "* Obligatoriske oppføringer \n Merk: **Utvidet enhetsoppdagelse** krever at **Discover Alexa-nettverket** er aktivert.",
         "title": "Alexa Media Player - Reconfiguration"
       }
     }
   },
   "services": {
-    "clear_history": {
-      "description": "Clear last entries from Alexa Voice history for each Alexa account.",
+    "enable_network_discovery": {
+      "description": "Aktiverer Alexa-nettverksoppdagelse på nytt, slik at neste avstemningssyklus vil oppdage Alexa-enheter på nytt for de valgte kontoene.",
       "fields": {
         "email": {
-          "description": "Accounts to clear. Empty will clear all.",
-          "name": "Email address"
-        },
-        "entries": {
-          "description": "Number of entries to clear from 1 to 50. If empty, clear 50.",
-          "name": "Number of Entries"
+          "description": "Valgfri e-postadresse for Alexa-kontoen eller liste over e-postadresser. Hvis tom, vil alle kjente kontoer bli oppdatert.",
+          "name": "E-postadresse"
         }
       },
-      "name": "Clear Amazon Voice History"
+      "name": "Aktiver nettverksoppdagelse"
     },
     "force_logout": {
       "description": "Force account to logout. Used mainly for debugging.",
@@ -91,6 +97,30 @@
         }
       },
       "name": "Force Logout"
+    },
+    "get_history_records": {
+      "description": "Analyserer historikkpostene for den angitte enheten",
+      "fields": {
+        "entity_id": {
+          "description": "Entitet å hente historien for",
+          "name": "Velg mediespiller:"
+        },
+        "entries": {
+          "description": "Antall oppføringer å få",
+          "name": "Antall oppføringer"
+        }
+      },
+      "name": "Få historikk"
+    },
+    "restore_volume": {
+      "description": "Gjenopprett forrige volumnivå på Alexa mediespillerenhet",
+      "fields": {
+        "entity_id": {
+          "description": "Entitet for å gjenopprette forrige volumnivå på",
+          "name": "Velg mediespiller:"
+        }
+      },
+      "name": "Gjenopprett forrige volum"
     },
     "update_last_called": {
       "description": "Forces update of last_called echo device for each Alexa account.",
