--- a/custom_components/alexa_media/translations/nl.json
+++ b/custom_components/alexa_media/translations/nl.json
@@ -9,8 +9,10 @@
       "2fa_key_invalid": "Ongeldige ingebouwde 2FA sleutel",
       "connection_error": "Fout bij verbinding; controleer netwerk en probeer opnieuw",
       "identifier_exists": "Dit e-mailadres voor Alexa URL is al geregistreerd",
+      "invalid_auth": "Inloggen is mislukt. Controleer uw e-mailadres, wachtwoord en Authenticator-sleutel nogmaals.",
       "invalid_credentials": "Ongeldige inloggegevens",
       "invalid_url": "De URL is ongeldig: {message}",
+      "oauth_error": "OAuth-aanmelding kon niet worden voltooid. Probeer het opnieuw.",
       "unable_to_connect_hass_url": "Kan geen verbinding maken met de Home Assistant url. Controleer de externe url onder Configuratie - > Algemeen",
       "unknown_error": "Onbekende fout: {message}"
     },
@@ -39,14 +41,22 @@
           "include_devices": "Inbegrepen apparaten (Scheiding: komma)",
           "otp_secret": "Ingebouwde 2FA App Key (genereert automatisch 2FA-codes). Deze is niet zes cijfers lang.",
           "password": "Wachtwoord",
+          "public_url": "Openbare URL gedeeld met externe gehoste services",
           "queue_delay": "Aantal seconden wachten om opdrachten in de wachtrij te groeperen",
           "scan_interval": "Aantal seconden tussen scans",
           "securitycode": "2FA sleutel (aanbevolen om inlogproblemen te voorkomen)",
+          "should_get_network": "Ontdek het Alexa-netwerk",
           "url": "Domeinnaam van Amazon regio (bijv: amazon.co.uk)"
         },
         "description": "Bevestig de onderstaande informatie. Schakel voor oudere configuraties de optie 'Inlogproxymethode gebruiken' uit.",
         "title": "Alexa Mediaspeler - Configuratie"
       }
+    }
+  },
+  "issues": {
+    "deprecated_yaml_configuration": {
+      "description": "De YAML-configuratie van Alexa Media Player is verouderd \n en wordt verwijderd in versie 4.14.0. \n Er wordt geen automatische import van uitgevoerd. \n Verwijder het uit uw configuratie, start Home Assistant opnieuw op en gebruik de gebruikersinterface om het te configureren. \n Instellingen > Apparaten en services > Integraties > INTEGRATIE TOEVOEGEN",
+      "title": "YAML-configuratie is verouderd"
     }
   },
   "options": {
@@ -56,11 +66,11 @@
           "debug": "Geavanceerde foutopsporing",
           "exclude_devices": "Uitgesloten apparaten (Scheiding: komma)",
           "extended_entity_discovery": "Inclusief apparaten verbonden via Echo",
-          "hass_url": "Openbare URL voor toegang tot Home Assistant (inclusief afsluitende '/')",
           "include_devices": "Inbegrepen apparaten (Scheiding: komma)",
           "public_url": "Openbare URL voor toegang tot Home Assistant (inclusief afsluitende '/')",
           "queue_delay": "Aantal seconden wachten om opdrachten in de wachtrij te groeperen",
-          "scan_interval": "Aantal seconden tussen scans"
+          "scan_interval": "Aantal seconden tussen scans",
+          "should_get_network": "Ontdek het Alexa-netwerk"
         },
         "description": "Vereist *",
         "title": "Alexa Mediaspeler - Herconfiguratie"
@@ -68,19 +78,15 @@
     }
   },
   "services": {
-    "clear_history": {
-      "description": "Wis de laatste items uit de Alexa stemgeschiedenis voor elk Alexa account.",
+    "enable_network_discovery": {
+      "description": "Schakelt Alexa-netwerkdetectie opnieuw in, zodat bij de volgende pollingcyclus Alexa-apparaten voor de geselecteerde accounts opnieuw worden gedetecteerd.",
       "fields": {
         "email": {
-          "description": "Accounts om te wissen. Als het veld leeg is, wordt alles gewist.",
+          "description": "Optioneel Alexa-account-e-mailadres of lijst met e-mailadressen. Indien leeg, worden alle bekende accounts vernieuwd.",
           "name": "E-mailadres"
-        },
-        "entries": {
-          "description": "Aantal items om te wissen van 1 tot 50. Als het veld leeg is, verwijder er dan 50.",
-          "name": "Aantal items"
         }
       },
-      "name": "Wis Amazon stemgeschiedenis"
+      "name": "Netwerkdetectie inschakelen"
     },
     "force_logout": {
       "description": "Forceer account om uit te loggen. Voornamelijk gebruikt voor foutopsporing.",
@@ -91,6 +97,30 @@
         }
       },
       "name": "Uitloggen forceren"
+    },
+    "get_history_records": {
+      "description": "Analyseert de geschiedenisrecords voor het opgegeven apparaat",
+      "fields": {
+        "entity_id": {
+          "description": "Entiteit om de geschiedenis op te halen",
+          "name": "Selecteer mediaspeler:"
+        },
+        "entries": {
+          "description": "Aantal inzendingen om te krijgen",
+          "name": "Aantal inzendingen"
+        }
+      },
+      "name": "Geschiedenisrecords ophalen"
+    },
+    "restore_volume": {
+      "description": "Herstel het vorige volumeniveau op het Alexa-mediaspelerapparaat",
+      "fields": {
+        "entity_id": {
+          "description": "Entiteit om het vorige volumeniveau te herstellen",
+          "name": "Selecteer mediaspeler:"
+        }
+      },
+      "name": "Vorig volume herstellen"
     },
     "update_last_called": {
       "description": "Forceert update van last_called echo apparaat voor elk Alexa-account.",
