--- a/custom_components/alexa_media/translations/pt-BR.json
+++ b/custom_components/alexa_media/translations/pt-BR.json
@@ -9,8 +9,10 @@
       "2fa_key_invalid": "Chave integrada 2FA inválida",
       "connection_error": "Erro de conexão; verifique a sua conexão e tente novamente",
       "identifier_exists": "Email para URL Alexa já registrado",
+      "invalid_auth": "O login não foi bem-sucedido. Verifique novamente seu e-mail, senha e chave de autenticação.",
       "invalid_credentials": "Credenciais inválidas",
       "invalid_url": "O URL é inválido: {message}",
+      "oauth_error": "Não foi possível concluir o login OAuth. Tente novamente.",
       "unable_to_connect_hass_url": "Não foi possível conectar ao URL do Home Assistant. Por favor, verifique o URL Externo em Configuração - > Geral",
       "unknown_error": "Erro desconhecido: {message}"
     },
@@ -39,14 +41,22 @@
           "include_devices": "Dispositivos incluídos (separado por vírgula)",
           "otp_secret": "Chave de aplicativo 2FA integrada (gera códigos 2FA automaticamente). Isso não tem seis dígitos.",
           "password": "Senha",
+          "public_url": "URL pública compartilhada com serviços hospedados externos",
           "queue_delay": "Segundos para aguardar os comandos de fila juntos",
           "scan_interval": "Segundos entre varreduras",
           "securitycode": "[%key_id:55616596%]",
+          "should_get_network": "Descubra a rede Alexa",
           "url": "Domínio regional da Amazon (ex: amazon.co.uk)"
         },
         "description": "Por favor, confirme as informações abaixo. Para configuração legada, desative a opção `Usar método de proxy de login`.",
         "title": "Alexa Media Player - Configurações"
       }
+    }
+  },
+  "issues": {
+    "deprecated_yaml_configuration": {
+      "description": "A configuração YAML do Alexa Media Player está obsoleta \n e será removida na versão 4.14.0. \n Não haverá importação automática disso. \n Remova-o da sua configuração, reinicie o Home Assistant e use a IU para configurá-lo. \n Configurações > Dispositivos e serviços > Integrações > ADICIONAR INTEGRAÇÃO",
+      "title": "A configuração YAML está obsoleta"
     }
   },
   "options": {
@@ -56,11 +66,11 @@
           "debug": "Depuração avançada",
           "exclude_devices": "Dispositivos excluídos (separado por vírgula)",
           "extended_entity_discovery": "Incluir dispositivos conectados via Echo",
-          "hass_url": "URL pública para acessar o Home Assistant (incluindo a barra final ''/')",
           "include_devices": "Dispositivos incluídos (separado por vírgula)",
           "public_url": "URL pública para acessar o Home Assistant (incluindo a barra final ''/')",
           "queue_delay": "Segundos para aguardar os comandos de fila juntos",
-          "scan_interval": "Segundos entre escaneamentos"
+          "scan_interval": "Segundos entre escaneamentos",
+          "should_get_network": "Descubra a rede Alexa"
         },
         "description": "Obrigatório *",
         "title": "Alexa Media Player - Reconfiguração"
@@ -68,19 +78,15 @@
     }
   },
   "services": {
-    "clear_history": {
-      "description": "Limpe as últimas entradas do histórico de voz da Alexa para cada conta Alexa.",
+    "enable_network_discovery": {
+      "description": "Reativa a descoberta de rede da Alexa para que o próximo ciclo de pesquisa redescubra os dispositivos Alexa das contas selecionadas.",
       "fields": {
         "email": {
-          "description": "Contas para limpar. Deixar vazio limpará tudo.",
+          "description": "Opcional: E-mail da conta Alexa ou lista de e-mails. Se estiver vazio, todas as contas conhecidas serão atualizadas.",
           "name": "Endereço de email"
-        },
-        "entries": {
-          "description": "Número de entradas para limpar de 1 a 50. Se deixar vazio, vai limpar as 50.",
-          "name": "Número de entradas"
         }
       },
-      "name": "Limpar histórico de voz da Amazon"
+      "name": "Habilitar descoberta de rede"
     },
     "force_logout": {
       "description": "Forçar o logout da conta. Usado principalmente para depuração.",
@@ -91,6 +97,30 @@
         }
       },
       "name": "Forçar o logout"
+    },
+    "get_history_records": {
+      "description": "Analisa os registros de histórico do dispositivo especificado",
+      "fields": {
+        "entity_id": {
+          "description": "Entidade para obter o histórico de",
+          "name": "Selecione o media player:"
+        },
+        "entries": {
+          "description": "Número de entradas para obter",
+          "name": "Número de entradas"
+        }
+      },
+      "name": "Obter registros históricos"
+    },
+    "restore_volume": {
+      "description": "Restaurar o nível de volume anterior no dispositivo reprodutor de mídia Alexa",
+      "fields": {
+        "entity_id": {
+          "description": "Entidade para restaurar o nível de volume anterior",
+          "name": "Selecione o media player:"
+        }
+      },
+      "name": "Restaurar volume anterior"
     },
     "update_last_called": {
       "description": "Força a atualização do último dispositivo eco chamado para cada conta Alexa.",
