--- a/custom_components/alexa_media/translations/ru.json
+++ b/custom_components/alexa_media/translations/ru.json
@@ -9,8 +9,10 @@
       "2fa_key_invalid": "Неверный встроенный ключ 2FA",
       "connection_error": "Ошибка подключения; проверьте сеть и повторите попытку",
       "identifier_exists": "Электронная почта для Alexa уже зарегистрирована",
+      "invalid_auth": "Не удалось войти. Пожалуйста, проверьте адрес электронной почты, пароль и ключ аутентификации.",
       "invalid_credentials": "Неверные учетные данные",
       "invalid_url": "Недопустимый URL-адрес: {message}",
+      "oauth_error": "Не удалось завершить вход через OAuth. Попробуйте ещё раз.",
       "unable_to_connect_hass_url": "Не удалось подключиться к URL-адресу Home Assistant. Проверьте внешний URL-адрес в разделе «Конфигурация» - > «Общие».",
       "unknown_error": "Неизвестная ошибка: {message}"
     },
@@ -39,14 +41,22 @@
           "include_devices": "Включенные устройства (разделенное запятыми)",
           "otp_secret": "Встроенный ключ приложения 2FA (автоматически генерирует коды 2FA). Это не шесть цифр.",
           "password": "Пароль",
+          "public_url": "Публичный URL-адрес, предоставленный внешним размещенным службам",
           "queue_delay": "Секунды ожидания, чтобы выполнить команды вместе",
           "scan_interval": "Секунды между сканированиями",
           "securitycode": "[%key_id:55616596%]",
+          "should_get_network": "Откройте для себя сеть Alexa",
           "url": "Домен региона Amazon (например, amazon.co.uk)"
         },
         "description": "Пожалуйста, подтвердите информацию ниже. Для устаревшей конфигурации отключите опцию «Использовать метод прокси-сервера для входа».",
         "title": "Alexa Media Player - Конфигурация"
       }
+    }
+  },
+  "issues": {
+    "deprecated_yaml_configuration": {
+      "description": "Конфигурация YAML проигрывателя Alexa Media Player устарела \n и будет удалена в версии 4.14.0. \n Автоматического импорта не будет. \n Удалите ее из конфигурации, перезапустите Home Assistant и используйте пользовательский интерфейс для ее настройки. \n Настройки > Устройства и службы > Интеграции > ДОБАВИТЬ ИНТЕГРАЦИЮ",
+      "title": "Конфигурация YAML устарела"
     }
   },
   "options": {
@@ -56,11 +66,11 @@
           "debug": "Расширенные возможности отладки",
           "exclude_devices": "Исключенные устройства (через запятую)",
           "extended_entity_discovery": "Включить устройства, подключенные через Echo",
-          "hass_url": "Публичный URL-адрес для доступа к Home Assistant (включая завершающий '/')",
           "include_devices": "Включенные устройства (разделенное запятыми)",
           "public_url": "Публичный URL-адрес для доступа к Home Assistant (включая завершающий '/')",
           "queue_delay": "Секунды ожидания, чтобы выполнить команды вместе",
-          "scan_interval": "Секунды между сканированиями"
+          "scan_interval": "Секунды между сканированиями",
+          "should_get_network": "Откройте для себя сеть Alexa"
         },
         "description": "Необходимый *",
         "title": "Alexa Media Player - Перенастройка"
@@ -68,19 +78,15 @@
     }
   },
   "services": {
-    "clear_history": {
-      "description": "Очистить последнюю сущность из Алекса Голосовой Истории для каждого аккаунта.",
+    "enable_network_discovery": {
+      "description": "Повторно включает обнаружение сети Alexa, чтобы в следующем цикле опроса были повторно обнаружены устройства Alexa для выбранных учетных записей.",
       "fields": {
         "email": {
-          "description": "Аккаунты к очистке. Если пустое, то очистить все.",
+          "description": "Необязательный адрес электронной почты для учётной записи Alexa или список адресов электронной почты. Если не указано, все известные учётные записи будут обновлены.",
           "name": "Почтовые адреса"
-        },
-        "entries": {
-          "description": "Количество сущностей для очистки, от 1 до 50. Если пустое, то очистить 50.",
-          "name": "Количество сущностей"
         }
       },
-      "name": "Очистить Алекса Голосовую Историю"
+      "name": "Включить сетевое обнаружение"
     },
     "force_logout": {
       "description": "Принудительный выход из аккаунта. В основном используется для отладки.",
@@ -91,6 +97,30 @@
         }
       },
       "name": "Принудительный выход"
+    },
+    "get_history_records": {
+      "description": "Анализирует записи истории для указанного устройства.",
+      "fields": {
+        "entity_id": {
+          "description": "Сущность, для которой нужно получить историю",
+          "name": "Выберите медиаплеер:"
+        },
+        "entries": {
+          "description": "Количество записей, которые нужно получить",
+          "name": "Количество записей"
+        }
+      },
+      "name": "Получить исторические записи"
+    },
+    "restore_volume": {
+      "description": "Восстановить предыдущий уровень громкости на медиаплеере Alexa",
+      "fields": {
+        "entity_id": {
+          "description": "Сущность для восстановления предыдущего уровня громкости",
+          "name": "Выберите медиаплеер:"
+        }
+      },
+      "name": "Восстановить предыдущий том"
     },
     "update_last_called": {
       "description": "Принудительное обновление последнего вызванного устройства для каждого аккаунта Алекса.",
